@@ -32,10 +32,10 @@
                     ]
   :dependencies     [
                       [org.clojure/clojure                       "1.9.0"]
-                      [org.apache.commons/commons-lang3          "3.7"]
+                      [org.apache.commons/commons-lang3          "3.8.1"]
                       [aero                                      "1.1.3"]
-                      [mount                                     "0.1.12"]
-                      [org.clojure/tools.cli                     "0.3.7"]
+                      [mount                                     "0.1.13"]
+                      [org.clojure/tools.cli                     "0.4.1"]
                       [org.clojure/tools.logging                 "0.4.1"]
                       [org.clojure/core.memoize                  "0.7.1"]
                       [ch.qos.logback/logback-classic            "1.2.3"]
@@ -47,8 +47,8 @@
                       [clj-time                                  "0.14.4"]
                       [com.github.grinnbearit/freemarker-clj     "-SNAPSHOT"]
                       [irresponsible/tentacles                   "0.6.2"]
-                      [org.clojars.pmonks/clj-2253               "0.1.0" :exclusions [org.clojure/clojure]]
-                      [org.symphonyoss/clj-symphony              "0.8.0" :exclusions [org.clojure/clojure org.slf4j/slf4j-log4j12]]
+                      [org.clojars.pmonks/clj-2253               "0.1.0"  :exclusions [org.clojure/clojure]]
+                      [org.symphonyoss/clj-symphony              "0.10.0" :exclusions [org.clojure/clojure org.slf4j/slf4j-log4j12]]
 
                       ; The following dependencies are inherited but have conflicting versions, so we "pin" the versions here
                       [com.fasterxml.jackson.core/jackson-core                      ~jackson-version]
@@ -64,19 +64,13 @@
                       [org.glassfish.jersey.core/jersey-client                      ~jersey-version]
                       [org.glassfish.jersey.core/jersey-common                      ~jersey-version]
                       [org.glassfish.jersey.media/jersey-media-json-jackson         ~jersey-version]
-                      [clj-http                                                     "3.9.0"]
+                      [clj-http                                                     "3.9.1"]
                       [joda-time/joda-time                                          "2.10"]
                       [org.hamcrest/hamcrest-core                                   "1.3"]
                     ]
-  :profiles         {:dev {:dependencies [[midje         "1.9.1"]]
+  :profiles         {:dev {:dependencies [[midje         "1.9.2"]]
                            :plugins      [[lein-midje    "3.2.1"]
                                           [lein-licenses "0.2.2"]]}
                      :uberjar {:aot          :all
                                :uberjar-name "bot-github-chatops-standalone.jar"}}
-  :jvm-opts         ~(let [version     (System/getProperty "java.version")
-                           [major _ _] (clojure.string/split version #"\.")]
-                       (if (>= (java.lang.Integer/parseInt major) 9)
-                         ["--add-modules" "java.xml.bind"]
-                         []))
-  :main             bot-github-chatops.main
-  )
+  :main             bot-github-chatops.main)
